7.pass variable to view file

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -8,8 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-         <h1>
-             Welcome to Symfony World
-         </h1>
+<div style="max-width: 90%; margin: auto;">
+    <h1>
+        Welcome to Symfony World
+    </h1>
+    <p style="color: red; font-weight: bold">
+        {{ title }}
+    </p>
+</div>
 </body>
 </html>
