22.add css files

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -8,10 +8,6 @@
 
 {% block body %}
 
-    {% for car in  cars %}
-
-         <li>{{ car }}</li>
-
-    {% endfor %}
+    <h1>Lorem ipsum dolor sit amet.</h1>
 
 {% endblock %}
