--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,7 +1,9 @@
 body {
-    background-color: lightgray;
+    background-color: white;
 }
 
 h1 {
-    color: aqua;
+    color: purple;
+    text-align: center;
+    margin: 50vh;
 }
