--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -8,6 +8,9 @@
 
 {% block body %}
 
-    <h1>Lorem ipsum dolor sit amet.</h1>
+    <div style="margin:0 auto; max-width: 80%;">
+        <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, nostrum!</h3>
+        <img src="{{ asset('img/download.jpeg') }}" alt="">
+    </div>
 
 {% endblock %}
