--- a/templates/movie/index.html.twig
+++ b/templates/movie/index.html.twig
@@ -57,7 +57,7 @@
                     <td>
 
                         <form action="#" method="post">
-                            <a class="btn btn-success" href="#">Show</a>
+                            <a class="btn btn-success" href="/movies/{{ movie.id }}">Show</a>
                             <a class="btn btn-warning" href="#">edit</a>
                             <button type="submit" class="btn btn-sm btn-danger">Delete</button>
                         </form>
