30.blog post data store

--- a/templates/movie/index.html.twig
+++ b/templates/movie/index.html.twig
@@ -24,7 +24,7 @@
                 </div>
 
                 <div class="col-sm-2 mb-5">
-                    <a class="btn btn-sm btn-success" href="/movies/create">Create New</a>
+                    <a class="btn btn-sm btn-success" href="{{ path('movie.create') }}">Create New</a>
                 </div>
 
 
