--- a/templates/movie/create.html.twig
+++ b/templates/movie/create.html.twig
@@ -13,54 +13,19 @@
         <div class="mt-5">
         <div class="row">
             <div class="col-lg-12">
-                <h3>New Blog</h3>
+                <h3 class="mb-5">New Blog</h3>
             </div>
         </div>
 
 
 
-            <form action="#" enctype="multipart/form-data" method="post">
-
+         {{ form_start(form) }}
 
                 <div class="row">
 
                     <div class="col-md-12">
-                        <strong>Title</strong>
-                        <input type="text" name="title" class="form-control" placeholder="Title">
+                      {{ form_widget(form) }}
                     </div>
-                    <div class="col-md-12">
-                        <strong>Release Year</strong>
-                        <input type="date" name="release_year" class="form-control" placeholder="Release Year">
-                    </div>
-
-                    <div class="col-md-12">
-                        <strong>Description</strong>
-                        <textarea name="description" placeholder="Description" class="form-control" cols="30" rows="10"></textarea>
-                    </div>
-
-
-                    <br>
-                    <br>
-
-
-
-
-                    <div class="col-md-12">
-                        <br>
-                        <br>
-                        <label for="">Upload Image</label>
-
-                        <input type="file" name="image">
-
-
-                        <br>
-
-                        <br>
-                    </div>
-
-
-
-
 
                     <div class="col-md-12">
                         <a href="{{ path('movie.index') }}" class="btn btn-sm btn-success"> Back</a>
@@ -68,7 +33,10 @@
                     </div>
 
                 </div>
-            </form>
+
+       {{ form_end(form) }}
+
+
         </div>
 
 
