--- a/templates/movie/show.html.twig
+++ b/templates/movie/show.html.twig
@@ -70,7 +70,7 @@
                 <div class="col-md-12">
                     <div class="form-group">
 
-                        <img src="{{ movie.imagePath }}" alt="">
+                        <img width="400px" src="{{ movie.imagePath }}" alt="">
 
                     </div>
                 </div>
