33.blog post data edit first commit

--- a/templates/movie/index.html.twig
+++ b/templates/movie/index.html.twig
@@ -58,7 +58,7 @@
 
                         <form action="#" method="post">
                             <a class="btn btn-success" href="/movies/{{ movie.id }}">Show</a>
-                            <a class="btn btn-warning" href="#">edit</a>
+                            <a class="btn btn-warning" href="/movies/edit/{{ movie.id }}">edit</a>
                             <button type="submit" class="btn btn-sm btn-danger">Delete</button>
                         </form>
 
