--- a/templates/movie/edit.html.twig
+++ b/templates/movie/edit.html.twig
@@ -19,38 +19,15 @@
         <form action="#" enctype="multipart/form-data" method="post">
 
             <div class="row">
-
-                <div class="col-md-12">
-                    <strong>Name Siswa</strong>
-                    <input type="text" name="namaSiswa" value="#" class="form-control">
+                {{ form_start(form) }}
+                <div class="col-md-12 mb-5">
+                     {{ form_widget(form) }}
                 </div>
-
-
                 <div class="col-md-12">
-                    <strong>Alamat Siswa</strong>
-                    <textarea name="alamatSiswa"  class="form-control" cols="30" rows="10">  Lorem ipsum dolor sit amet. </textarea>
-                </div>
-
-
-                <div class="form-group">
-                    <label for="col-md-4 text-right">Select Profile Image</label>
-                    <div class="col-md-8">
-                        <input type="file" name="image">
-                        <img src="#" class="img-thumbnail" width="100" alt="">
-
-                        <input type="hidden" name="hidden_image" value="#">
-
-                    </div>
-                </div>
-
-
-
-
-                <div class="col-md-12">
-                    <a href="#" class="btn btn-sm btn-success"> Back</a>
+                    <a href="{{ path('movie.index') }}" class="btn btn-sm btn-success"> Back</a>
                     <button type="submit" class="btn btn-sm btn-primary">Submit</button>
                 </div>
-
+                {{ form_end(form) }}
             </div>
         </form>
 
