--- a/templates/movie/index.html.twig
+++ b/templates/movie/index.html.twig
@@ -56,7 +56,7 @@
                     <td><img src="{{ asset(movie.imagePath) }}" width="100px" alt=""></td>
                     <td>
 
-                        <form action="#" method="post">
+                        <form action="/movies/delete/{{ movie.id }}" method="get">
                             <a class="btn btn-success" href="/movies/{{ movie.id }}">Show</a>
                             <a class="btn btn-warning" href="/movies/edit/{{ movie.id }}">edit</a>
                             <button type="submit" class="btn btn-sm btn-danger">Delete</button>
